--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/cursomc?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+# No MySQL
+#  spring.jpa.hibernate.ddl-auto=create
+#  spring.datasource.url=jdbc:mysql://localhost:3306/cursomc?autoReconnect=true&useSSL=false
+#  spring.datasource.username=root
+#  spring.datasource.password=root
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # spring.jpa.hibernate.ddl-auto
 # none        -> This is the default for MySQL, no change to the database structure.
