--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency>-->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
