--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,13 @@ spring.datasource.url=mysql://b9ca5ae3a7ae00:7b17c0f0@us-cdbr-iron-east-04.clear
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=anderson.costa2203@gmail.com
+spring.mail.password=@nders0n_nov3mbr0_2013
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
