Configuracao inicial do Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Para criar um profile específico de test
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=anderson.costa2203@gmail.com
 default.recipient=acostaangel171@hotmail.com
