Adicionando senha a Cliente

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=andersoncosta2203@gmail.com
-spring.mail.password=
+spring.mail.password=$2a$10$B1/dtAw7qkU8L3JfDhLQrOZkR6KdR/lFIGdrYX//avd9PTwACjNqy
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
