--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=test
 
 default.sender=anderson.costa2203@gmail.com
 default.recipient=acostaangel171@hotmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
