adicionando img diagrama

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ default.recipient=acostaangel171@hotmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=180000
+
+aws.access_key_id=AKIAJDH7SU42FTE7EURA
+aws.secret_access_key=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
+s3.bucket=curso-springionic
+s3.region=sa-east-1
+
